feat: Enhance UI/UX across various modules including cinemas, products, and user management, alongside general code and styling adjustments.